# localpaas_app/interface/api/handler/settingshandler/settings_handler_slack.go
@@ -1,0 +1,222 @@
+package settingshandler
+
+import (
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+
+	"github.com/localpaas/localpaas/localpaas_app/apperrors"
+	"github.com/localpaas/localpaas/localpaas_app/base"
+	"github.com/localpaas/localpaas/localpaas_app/permission"
+	"github.com/localpaas/localpaas/localpaas_app/usecase/settings/slackuc/slackdto"
+)
+
+// To keep `apperrors` pkg imported and swag gen won't fail
+type _ *apperrors.ErrorInfo
+
+// ListSlack Lists Slack settings
+// @Summary Lists Slack settings
+// @Description Lists Slack settings
+// @Tags    settings_slack
+// @Produce json
+// @Id      listSlackSettings
+// @Param   search query string false "`search=<target> (support *)`"
+// @Param   pageOffset query int false "`pageOffset=offset`"
+// @Param   pageLimit query int false "`pageLimit=limit`"
+// @Param   sort query string false "`sort=[-]field1|field2...`"
+// @Success 200 {object} slackdto.ListSlackResp
+// @Failure 400 {object} apperrors.ErrorInfo
+// @Failure 500 {object} apperrors.ErrorInfo
+// @Router  /settings/slack [get]
+func (h *SettingsHandler) ListSlack(ctx *gin.Context) {
+	auth, err := h.authHandler.GetCurrentAuth(ctx, &permission.AccessCheck{
+		ResourceType: base.ResourceTypeSlack,
+		Action:       base.ActionTypeRead,
+	})
+	if err != nil {
+		h.RenderError(ctx, err)
+		return
+	}
+
+	req := slackdto.NewListSlackReq()
+	if err = h.ParseRequest(ctx, req, &req.Paging); err != nil {
+		h.RenderError(ctx, err)
+		return
+	}
+
+	resp, err := h.slackUC.ListSlack(h.RequestCtx(ctx), auth, req)
+	if err != nil {
+		h.RenderError(ctx, err)
+		return
+	}
+
+	ctx.JSON(http.StatusOK, resp)
+}
+
+// GetSlack Gets Slack setting details
+// @Summary Gets Slack setting details
+// @Description Gets Slack setting details
+// @Tags    settings_slack
+// @Produce json
+// @Id      getSlackSetting
+// @Param   ID path string true "setting ID"
+// @Success 200 {object} slackdto.GetSlackResp
+// @Failure 400 {object} apperrors.ErrorInfo
+// @Failure 500 {object} apperrors.ErrorInfo
+// @Router  /settings/slack/{ID} [get]
+func (h *SettingsHandler) GetSlack(ctx *gin.Context) {
+	id, err := h.ParseStringParam(ctx, "ID")
+	if err != nil {
+		h.RenderError(ctx, err)
+		return
+	}
+
+	auth, err := h.authHandler.GetCurrentAuth(ctx, &permission.AccessCheck{
+		ResourceType: base.ResourceTypeSlack,
+		ResourceID:   id,
+		Action:       base.ActionTypeRead,
+	})
+	if err != nil {
+		h.RenderError(ctx, err)
+		return
+	}
+
+	req := slackdto.NewGetSlackReq()
+	req.ID = id
+	if err = h.ParseRequest(ctx, req, nil); err != nil {
+		h.RenderError(ctx, err)
+		return
+	}
+
+	resp, err := h.slackUC.GetSlack(h.RequestCtx(ctx), auth, req)
+	if err != nil {
+		h.RenderError(ctx, err)
+		return
+	}
+
+	ctx.JSON(http.StatusOK, resp)
+}
+
+// CreateSlack Creates a new Slack setting
+// @Summary Creates a new Slack setting
+// @Description Creates a new Slack setting
+// @Tags    settings_slack
+// @Produce json
+// @Id      createSlackSetting
+// @Param   body body slackdto.CreateSlackReq true "request data"
+// @Success 201 {object} slackdto.CreateSlackResp
+// @Failure 400 {object} apperrors.ErrorInfo
+// @Failure 500 {object} apperrors.ErrorInfo
+// @Router  /settings/slack [post]
+func (h *SettingsHandler) CreateSlack(ctx *gin.Context) {
+	auth, err := h.authHandler.GetCurrentAuth(ctx, &permission.AccessCheck{
+		ResourceType: base.ResourceTypeSlack,
+		Action:       base.ActionTypeWrite,
+	})
+	if err != nil {
+		h.RenderError(ctx, err)
+		return
+	}
+
+	req := slackdto.NewCreateSlackReq()
+	if err := h.ParseJSONBody(ctx, req); err != nil {
+		h.RenderError(ctx, err)
+		return
+	}
+
+	resp, err := h.slackUC.CreateSlack(h.RequestCtx(ctx), auth, req)
+	if err != nil {
+		h.RenderError(ctx, err)
+		return
+	}
+
+	ctx.JSON(http.StatusCreated, resp)
+}
+
+// UpdateSlack Updates Slack setting
+// @Summary Updates Slack setting
+// @Description Updates Slack setting
+// @Tags    settings_slack
+// @Produce json
+// @Id      updateSlackSetting
+// @Param   ID path string true "setting ID"
+// @Success 200 {object} slackdto.UpdateSlackResp
+// @Failure 400 {object} apperrors.ErrorInfo
+// @Failure 500 {object} apperrors.ErrorInfo
+// @Router  /settings/slack/{ID} [put]
+func (h *SettingsHandler) UpdateSlack(ctx *gin.Context) {
+	id, err := h.ParseStringParam(ctx, "ID")
+	if err != nil {
+		h.RenderError(ctx, err)
+		return
+	}
+
+	auth, err := h.authHandler.GetCurrentAuth(ctx, &permission.AccessCheck{
+		ResourceType: base.ResourceTypeSlack,
+		ResourceID:   id,
+		Action:       base.ActionTypeWrite,
+	})
+	if err != nil {
+		h.RenderError(ctx, err)
+		return
+	}
+
+	req := slackdto.NewUpdateSlackReq()
+	req.ID = id
+	if err := h.ParseJSONBody(ctx, req); err != nil {
+		h.RenderError(ctx, err)
+		return
+	}
+
+	resp, err := h.slackUC.UpdateSlack(h.RequestCtx(ctx), auth, req)
+	if err != nil {
+		h.RenderError(ctx, err)
+		return
+	}
+
+	ctx.JSON(http.StatusOK, resp)
+}
+
+// DeleteSlack Deletes Slack setting
+// @Summary Deletes Slack setting
+// @Description Deletes Slack setting
+// @Tags    settings_slack
+// @Produce json
+// @Id      deleteSlackSetting
+// @Param   ID path string true "setting ID"
+// @Success 200 {object} slackdto.DeleteSlackResp
+// @Failure 400 {object} apperrors.ErrorInfo
+// @Failure 500 {object} apperrors.ErrorInfo
+// @Router  /settings/slack/{ID} [delete]
+func (h *SettingsHandler) DeleteSlack(ctx *gin.Context) {
+	id, err := h.ParseStringParam(ctx, "ID")
+	if err != nil {
+		h.RenderError(ctx, err)
+		return
+	}
+
+	auth, err := h.authHandler.GetCurrentAuth(ctx, &permission.AccessCheck{
+		ResourceType: base.ResourceTypeSlack,
+		ResourceID:   id,
+		Action:       base.ActionTypeDelete,
+	})
+	if err != nil {
+		h.RenderError(ctx, err)
+		return
+	}
+
+	req := slackdto.NewDeleteSlackReq()
+	req.ID = id
+	if err := h.ParseRequest(ctx, req, nil); err != nil {
+		h.RenderError(ctx, err)
+		return
+	}
+
+	resp, err := h.slackUC.DeleteSlack(h.RequestCtx(ctx), auth, req)
+	if err != nil {
+		h.RenderError(ctx, err)
+		return
+	}
+
+	ctx.JSON(http.StatusOK, resp)
+}
