# localpaas_app/usecase/settings/slackuc/slackdto/slack_list.go
@@ -1,0 +1,49 @@
+package slackdto
+
+import (
+	vld "github.com/tiendc/go-validator"
+
+	"github.com/localpaas/localpaas/localpaas_app/apperrors"
+	"github.com/localpaas/localpaas/localpaas_app/base"
+	"github.com/localpaas/localpaas/localpaas_app/basedto"
+	"github.com/localpaas/localpaas/localpaas_app/entity"
+)
+
+type ListSlackReq struct {
+	Status []base.SettingStatus `json:"-" mapstructure:"status"`
+	Search string               `json:"-" mapstructure:"search"`
+
+	Paging basedto.Paging `json:"-"`
+}
+
+func NewListSlackReq() *ListSlackReq {
+	return &ListSlackReq{
+		Paging: basedto.Paging{
+			// Default paging if unset by client
+			Sort: basedto.Orders{{Direction: basedto.DirectionAsc, ColumnName: "name"}},
+		},
+	}
+}
+
+func (req *ListSlackReq) Validate() apperrors.ValidationErrors {
+	var validators []vld.Validator
+	validators = append(validators, basedto.ValidateSlice(req.Status, true, 0, base.AllSettingStatuses, "status")...)
+	return apperrors.NewValidationErrors(vld.Validate(validators...))
+}
+
+type ListSlackResp struct {
+	Meta *basedto.Meta `json:"meta"`
+	Data []*SlackResp  `json:"data"`
+}
+
+func TransformSlacks(settings []*entity.Setting) (resp []*SlackResp, err error) {
+	resp = make([]*SlackResp, 0, len(settings))
+	for _, setting := range settings {
+		item, err := TransformSlack(setting)
+		if err != nil {
+			return nil, apperrors.Wrap(err)
+		}
+		resp = append(resp, item)
+	}
+	return resp, nil
+}
